--- a/_posts/2021-02-14-Diva-Vela.markdown
+++ b/_posts/2021-02-14-Diva-Vela.markdown
@@ -1,5 +1,6 @@
 ---
 layout: post
-title:  "Esmeralda Franco"
+title:  "Diva Vela"
 description: Celebremos juntos la llegada de nuestra pequeña Juliette 
 ---
+
